<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:menu="@menu/top_app_bar"
        app:navigationIcon="@drawable/ic_menu"
        app:subtitle="@string/subtitle"
        app:subtitleTextColor="?attr/subtitleTextColor"
        app:title="@string/app_name"
        app:titleTextColor="?attr/titleTextColor" />


        <Button
            android:id="@+id/add_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:layout_margin="32dp"
            android:background="@drawable/gradient_bg_main"
            android:text="@string/add_your_city" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_activity_toolbar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>