<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/weather_screen_card_bg"
    android:orientation="vertical"
    android:padding="@dimen/medium">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visibility"
        android:textColor="?attr/weatherScreenDividerColor"
        app:drawableTint="?attr/weatherScreenIconColor"
        app:drawableTopCompat="@drawable/ic_visibility"
        app:layout_constraintBottom_toTopOf="@+id/tv_visibility"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3.5 Km"
        android:textColor="?attr/weatherScreenTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        android:textColor="?attr/weatherScreenDividerColor"
        app:drawableTint="?attr/weatherScreenIconColor"
        app:drawableTopCompat="@drawable/ic_wind"
        app:layout_constraintBottom_toTopOf="@+id/tv_wind"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3  Km/h"
        android:textColor="?attr/weatherScreenTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clouds"
        android:textColor="?attr/weatherScreenDividerColor"
        app:drawableTint="?attr/weatherScreenIconColor"
        app:drawableTopCompat="@drawable/ic_clouds"
        app:layout_constraintBottom_toTopOf="@+id/tv_clouds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_clouds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="60 %"
        android:textColor="?attr/weatherScreenTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


</androidx.constraintlayout.widget.ConstraintLayout>